# veridia-backend

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/schemas/: detect_faces.py
deployment/: deployment.yaml  service.yaml
