[project]
name = "veridra-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "insightface>=0.7.3",
    "numpy>=2.2.3",
    "onnxruntime>=1.20.1",
    "opencv-python>=4.11.0.86",
    "qdrant-client>=1.13.2",
]

[dependency-groups]
dev = [
    "pip>=25.0.1",
]
